Bug 499638 - Updates list sorted alphabetically shouldn't be case-sensitive
Summary: Updates list sorted alphabetically shouldn't be case-sensitive
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: 6.2.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-07 09:25 UTC by John Veness
Modified: 2025-03-08 23:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.1
Sentry Crash Report:


Attachments
Discover Updates page case-sensitive sort (477.52 KB, image/png)
2025-02-07 09:25 UTC, John Veness
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Veness 2025-02-07 09:25:23 UTC
Created attachment 178041 [details]
Discover Updates page case-sensitive sort

SUMMARY
When viewing the list of pending Updates, the list is currently case-sensitive, e.g. MozillaFirefox appears before codium. This should not be the case.

STEPS TO REPRODUCE
1. Wait for many updates to be available, on an OS that tends to use mixed-case package names, e.g. openSUSE
2. Open Discover
3. Open Updates page
4. View the list

OBSERVED RESULT
List is sorted case-sensitive alphabetically.

EXPECTED RESULT
List is sorted case-insensitive alphabetically.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20250204
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.2
Kernel Version: 6.13.1-1-default (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i7-6560U CPU @ 2.20GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® Iris® Graphics 540
Manufacturer: Dell Inc.
Product Name: XPS 13 9350
Comment 1 Bug Janitor Service 2025-02-07 14:17:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1035
Comment 2 Harald Sitter 2025-02-13 13:49:21 UTC
Git commit a58ac1270f6f130ec704dfbb6c72ff70f1b951c4 by Harald Sitter.
Committed on 13/02/2025 at 13:25.
Pushed by sitter into branch 'master'.

updatemodel: collate names

M  +4    -2    libdiscover/UpdateModel/UpdateModel.cpp

https://invent.kde.org/plasma/discover/-/commit/a58ac1270f6f130ec704dfbb6c72ff70f1b951c4
Comment 3 Harald Sitter 2025-02-13 13:55:06 UTC
Git commit f5e1bc1538239901e57a7584e3daac428f0f089e by Harald Sitter.
Committed on 13/02/2025 at 13:49.
Pushed by sitter into branch 'Plasma/6.3'.

updatemodel: collate names


(cherry picked from commit a58ac1270f6f130ec704dfbb6c72ff70f1b951c4)

Co-authored-by: Harald Sitter <sitter@kde.org>

M  +4    -2    libdiscover/UpdateModel/UpdateModel.cpp

https://invent.kde.org/plasma/discover/-/commit/f5e1bc1538239901e57a7584e3daac428f0f089e
Comment 4 Bug Janitor Service 2025-03-06 23:06:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1050
Comment 5 Bug Janitor Service 2025-03-08 19:12:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1052
Comment 6 Aleix Pol 2025-03-08 23:42:34 UTC
Git commit 42aa91b2c8bc3f7865dc1005b26d6b2debc52011 by Aleix Pol, on behalf of Nate Graham.
Committed on 08/03/2025 at 19:11.
Pushed by apol into branch 'master'.

Sort offline update items case-insensitively

Just like we sort online updates, which was implemented in
a58ac1270f6f130ec704dfbb6c72ff70f1b951c4.

Inspired in Nate's patch.
Related: bug 500661
FIXED-IN: 6.3.3

M  +12   -3    libdiscover/backends/PackageKitBackend/PackageKitUpdater.cpp

https://invent.kde.org/plasma/discover/-/commit/42aa91b2c8bc3f7865dc1005b26d6b2debc52011
Comment 7 Bug Janitor Service 2025-03-08 23:43:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1054
Comment 8 Aleix Pol 2025-03-08 23:50:39 UTC
Git commit f8c36dcb607f2db3a384e46bbbe7379029c55217 by Aleix Pol Gonzalez.
Committed on 08/03/2025 at 23:43.
Pushed by apol into branch 'Plasma/6.3'.

Sort offline update items case-insensitively

Just like we sort online updates, which was implemented in
a58ac1270f6f130ec704dfbb6c72ff70f1b951c4.

Inspired in Nate's patch.
Related: bug 500661
FIXED-IN: 6.3.3


(cherry picked from commit 42aa91b2c8bc3f7865dc1005b26d6b2debc52011)

Co-authored-by: Nate Graham <nate@kde.org>

M  +12   -3    libdiscover/backends/PackageKitBackend/PackageKitUpdater.cpp

https://invent.kde.org/plasma/discover/-/commit/f8c36dcb607f2db3a384e46bbbe7379029c55217