updatemodel: collate names

BUG: 499638